# climate-sim-mpi-cpp

./: .clang-format  .coveragerc  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  gcovr.cfg  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  format.yml
bench/: CMakeLists.txt  bench_exchange.cpp
cmake/: climate-sim-mpi-cppConfig.cmake.in
configs/: dev.yaml  test.yaml
docs/: README.md  _config.yml  architecture.md  computational_analysis.md  demo.md  getting_started.md  index.md  learn.md  license.md  numerics.md
docs/_include/: mathjax.html
docs/assets/css/: custom.scss
include/: advection.hpp  boundary.hpp  decomp.hpp  diffusion.hpp  field.hpp  halo.hpp  init.hpp  io.hpp  stability.hpp
scripts/: format_all.sh  generate_ic.py  generate_ic_global_double.py  requirements.txt  run_benchmark.sh
src/: CMakeLists.txt  advection.cpp  boundary.cpp  decomp.cpp  diffusion.cpp  field.cpp  halo.cpp  init.cpp  io.cpp  main.cpp
tests/: CMakeLists.txt  test_boundary.cpp  test_config.cpp  test_decomp_mpi.cpp  test_diffusion.cpp  test_field.cpp  test_halo.cpp  test_init.cpp  test_integration.cpp  test_io.cpp  test_stability.cpp
tests/integration/: integration_advection.cpp  integration_boundary_error.cpp  integration_ic_netcdf.cpp  integration_netcdf_output.cpp
tests/simulation/integration/: integration_advection.cpp  integration_boundary_error.cpp  integration_constant_zero_csv.cpp  integration_csv_vs_nc.cpp  integration_decomp_coverage.cpp  integration_diffusion.cpp  integration_gaussian_csv.cpp  integration_helpers.cpp  integration_helpers.hpp  integration_ic.cpp  integration_ic_binary.cpp  integration_ic_netcdf.cpp  integration_netcdf_output.cpp
tests/simulation/unit/: test_advection.cpp  test_boundary.cpp  test_diffusion.cpp  test_init.cpp  test_io.cpp
tests/unit/: test_decomp_mpi.cpp  test_field.cpp  test_halo.cpp  test_init.cpp  test_io.cpp  test_stability.cpp
tests/visualization/: conftest.py  sample_data.py  test_cli.py  test_io.py  test_plots.py
visualization/: cli.py  io.py  plots.py
